--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: content-box;
+    box-sizing: border-box;
     overflow-x: hidden;
 }
 
@@ -11,17 +11,18 @@
     background-size: cover;
     width: 100%;
     height: 100vh;
-    animation: zoomInOut 4s ease-in-out infinite;
+    animation: smoothZoom 5s ease-in-out infinite;
+    transition: all 0.5s ease-in-out;
 }
 
-@keyframes zoomInOut {
+@keyframes smoothZoom {
     0% {
-        transform: scale(1) translate(0, 0); /* حالت عادی */
+        transform: scale(1); /* مقیاس اولیه */
     }
     50% {
-        transform: scale(1.1) translate(-20px, 50px); /* زوم این و حرکت به پایین سمت چپ */
+        transform: scale(1.05) translateY(-10px); /* زوم خیلی کم و حرکت مختصر */
     }
     100% {
-        transform: scale(1) translate(-10px, 50px); /* زوم اوت و حرکت به پایین سمت راست */
+        transform: scale(1); /* بازگشت به حالت اولیه */
     }
 }
