--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* یا تغییر به contain */
-    z-index: -1;
-    object-position: center top; 
+    object-fit: cover;
+    object-position: center top;
+    z-index: 0; /* تغییر به 0 یا بالاتر */
 }
 
 
@@ -33,6 +33,7 @@ body, html {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
     position: relative;
+    overflow: scroll;
     z-index: 1;
 }
 
