--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
 
 .date {
     font-family: 'BTraffiBold_0';
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     color: #34495e;
     /* margin: 1.5rem 0; */
     margin-top: 0.6rem;
@@ -113,6 +113,7 @@ body {
     font-size: 1.1rem;
     color: #7f8c8d;
    margin-top: -0.5rem;
+   line-height: 2;
    padding: 2rem 0;
    /* padding-bottom: 1rem; */
 }
