project is first section is done whit no bug

--- a/style.css
+++ b/style.css
@@ -122,7 +122,8 @@ body {
     font-size: 1.2rem;
     color: #34495e;
     margin-top: 0rem;
-    padding: 1rem 0;
+    /* padding: 1rem 0; */
+    line-height: 2;
     padding-right: 1rem;
 }
 
