project is first section is done whit no bug s

--- a/style.css
+++ b/style.css
@@ -121,9 +121,9 @@ body {
 .time-range {
     font-size: 1.2rem;
     color: #34495e;
-    margin-top: 0rem;
-    /* padding: 1rem 0; */
-    line-height: 2;
+    /* margin-top: 0rem; */
+    margin: 1rem 0;
+    padding: 1rem 0;
     padding-right: 1rem;
 }
 
