--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ body {
     font-size: 1.1rem;
     color: #34495e;
    margin-top: -2rem;
+   line-height: 2;
    padding: 2rem 0;
    /* padding-bottom: 1rem; */
 }
@@ -122,7 +123,7 @@ body {
     font-size: 1.2rem;
     color: #34495e;
     /* margin-top: 0rem; */
-    margin: 1rem 0;
+    margin: 0.7rem 0;
     padding: 1rem 0;
     padding-right: 1rem;
 }
