--- a/style.css
+++ b/style.css
@@ -23,15 +23,13 @@ body {
     overflow-x: hidden;
     text-align: center;
     max-width: 1000px;
-    overflow-x: hidden;
     margin: auto;
-
 }
 
 .container {
     position: relative;
     width: 100%;
-    height:100vh;
+    height: 100vh;
 }
 
 .invitation {
@@ -43,9 +41,6 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* background-color: rgba(255, 255, 255, 0.9); */
-    border-radius: 15px;
-    /* box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2); */
     text-align: center;
 }
 
@@ -53,7 +48,9 @@ body {
     font-family: 'IranNastaliq';
     font-size: 2.4rem;
     color: #e74c3c;
-    z-index: 100;
+    animation: fadeIn 2s ease-out;
+    opacity: 0;
+    animation-fill-mode: forwards;
 }
 
 .span_top,
@@ -61,13 +58,15 @@ body {
     font-family: 'Shekasteh', sans-serif;
     font-size: 1.3rem;
     margin: 0.5rem 0;
+    animation: fadeIn 3s ease-out 1s;
+    opacity: 0;
+    animation-fill-mode: forwards;
 }
 
 .names-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* margin-top: rem; */
 }
 
 .names {
@@ -75,13 +74,15 @@ body {
     font-size: 3rem;
     color: #6a617a;
     margin: 0.5rem 0;
+    animation: fadeIn 4s ease-out 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
 }
 
 /* متن اول سمت راست باشد */
 .names:first-child {
     align-self: flex-end;
     text-align: right;
-    /* margin-top: -1.7rem; */
     padding-right: 0.5rem;
 }
 
@@ -90,51 +91,54 @@ body {
     align-self: flex-start;
     text-align: left;
     margin-top: -1.7rem;
-    padding-left: 0rem;
+    padding-left: 0;
 }
-
 
 .date {
     font-family: 'BTraffiBold_0';
     font-size: 1.1rem;
-    /* color: #34495e; */
     color: #34495e;
-    /* margin: 1.5rem 0; */
     margin-top: 1rem;
     margin-bottom: 2.3;
+    animation: fadeIn 5s ease-out 3s;
+    opacity: 0;
+    animation-fill-mode: forwards;
 }
 
 .month {
     font-size: 1rem;
     color: #34495e;
-    /* color: #2980b9; */
+    margin-right: 0.5rem; /* فاصله کمتر بین تاریخ و به صرف شام */
 }
 
 .details {
     font-size: 1.1rem;
     color: #34495e;
-   margin-top: -2rem;
-   line-height: 2 !important;
-   padding: 2rem 0;
-   /* padding-bottom: 1rem; */
+    margin-top: -2rem;
+    line-height: 1.8;
+    padding: 1rem 0;
+    animation: fadeIn 6s ease-out 4s;
+    opacity: 0;
+    animation-fill-mode: forwards;
 }
 
 .time-range {
     font-size: 1.2rem;
     color: #34495e;
-    /* margin-top: 0rem; */
     margin: 0.5rem 0;
-    padding: 0.8rem 0;
     padding-right: 1rem;
+    padding: 0.8rem 0;
 }
 
 .poem {
     font-family: 'Shekasteh', sans-serif;
     font-size: 1.3rem;
-    /* color: #525555; */
     color: #020202;
     line-height: 2;
-    margin-top: -2zrem;
+    /* margin-top: -2rem; */
+    animation: fadeIn 7s ease-out 5s;
+    opacity: 0;
+    animation-fill-mode: forwards;
 }
 
 .top__left,
@@ -145,7 +149,6 @@ body {
     width: 50%;
     height: 50vh;
     background-size: cover;
-    /* object-fit: cover; */
 }
 
 .top__left {
@@ -159,7 +162,6 @@ body {
     animation: swayRight 7s ease-in-out infinite alternate;
 }
 
-
 .bottom__left {
     bottom: 0;
     left: 0;
@@ -170,6 +172,11 @@ body {
     bottom: 0;
     right: 0;
     animation: floatRight 7s ease-in-out infinite alternate;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 @keyframes swayLeft {
@@ -195,6 +202,7 @@ body {
     50% { transform: translateX(5px) translateY(-3px); opacity: 0.9; }
     100% { transform: translateX(-5px) translateY(3px); opacity: 1; }
 }
+
 .rotate-message {
     display: none;
     position: fixed;
@@ -216,18 +224,16 @@ body {
     top: 0;
     right: 2%;
     font-size: 1.5rem;
-    cursor: pointer; /* تغییر نشانگر به دست */
-    color: white; /* رنگ ایکن */
+    cursor: pointer;
+    color: white;
 }
 
-/* مدیا کوری برای عرض کمتر از 900 و ارتفاع کمتر از 500 */
-@media (max-height: 500px) {
-    .rotate-message {
-        display: block;
+@media (max-width: 400px) {
+    .details {
+        line-height: 1.5;
+        padding: 0.5rem 0;
     }
-}
 
-@media(max-width: 400px) {
     .invitation {
         margin-top: 0;
     }
