--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ body {
 .bottom__left {
     bottom: 0;
     left: 0;
+    margin-top: 1rem;
     padding-top: 1.5rem;
     animation: floatLeft 5s ease-in-out infinite alternate;
 }
@@ -172,6 +173,7 @@ body {
 .bottom__right {
     bottom: 0;
     padding-top: 1.5rem;
+    margin-top: 1rem;
     right: 0;
     animation: floatRight 7s ease-in-out infinite alternate;
 }
