--- a/style.css
+++ b/style.css
@@ -16,28 +16,143 @@
     padding: 0;
     box-sizing: border-box;
 }
-.swiper-container {
+body {
+    background-color: #ffffff !important; /* اجباری کردن پس‌زمینه سفید */
+    color: #000000; /* اطمینان از خوانایی متن با رنگ مشکی */
+    font-family: 'BTraffiBold_0', sans-serif;
+    overflow-x: hidden;
+    text-align: center;
+    max-width: 1000px;
+    position: relative;
+    height: 100%;
+    margin: auto;
+}
+.swiper {
     width: 100%;
-    height: 100vh; /* تمام ارتفاع صفحه */
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .swiper-slide:nth-child(2){
+    background-image: url("image/IMG_20241021_142951 (1).jpg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    background-color: #F8F8F8 !important;
+  }
+
+
+.text-overlay {
+    position: absolute;
+    top: 47%;
+    left: 51%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 1.4rem;
+    background-color: rgba(255, 255, 255, 0.6); /* نیمه شفاف برای زمینه */
+    padding: 20px;
+    border-radius: 10px; /* گرد کردن گوشه‌ها */
+    font-family: 'IranNastaliq', sans-serif; /* فونت مناسب */
 }
 
-.swiper-slide {
+.text-overlay span {
+    display: block;
+    /* font-size: 1.5rem; */
+    color: #000; /* رنگ متن */
+}
+
+.date {
+    font-weight: bold;
+    font-size: 1.5rem !important;
+    font-family: 'IranNastaliq', sans-serif;
+}
+
+.event-time {
+    font-size: 2.5rem;
+    margin-top: -2rem ;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    gap: 10px; /* فاصله بین آیتم‌ها */
+    font-size: 2.1rem; /* سایز فونت */
+    color: #333; /* رنگ متن */
+}
+
+.start-time,
+.end-time{
+    font-weight: 600;
+}
+.swiper-button-next,
+.swiper-button-prev,
+.swiper-pagination{
+    display: none !important;
+}
+/* تنظیمات دارع تایمر */
+/* .autoplay-progress{
+    display: none;
+} */
+  .autoplay-progress {
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+    z-index: 10;
+    width: 48px;
+    height: 48px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%; /* تمام عرض هر اسلاید */
-    background-size: cover;
-    background-position: center;
-}
+    font-weight: bold;
+    color: var(--swiper-theme-color);
+  }
 
+  .autoplay-progress svg {
+    --progress: 0;
+    position: absolute;
+    left: 0;
+    top: 0px;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    stroke-width: 4px;
+    stroke: var(--swiper-theme-color);
+    fill: none;
+    stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
+    stroke-dasharray: 125.6;
+    transform: rotate(-90deg);
+  }
 
-.myslider2{
+  .myslider2 {
     background-image: url("image/IMG_20241021_142951 (1).jpg");
     background-size: contain;
     background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
+    animation: subtleMove 10s ease-in-out infinite; /* انیمیشن با حرکت ریز و تکرارشونده */
 }
+
+/* کی‌فریم برای حرکت ریز */
+@keyframes subtleMove {
+    0% {
+        transform: scale(1) translate(0, 0); /* حالت اولیه تصویر */
+    }
+    50% {
+        transform: scale(1.1) translate(2px, -2px); /* کمی بزرگ‌تر و جابه‌جایی ملایم */
+    }
+    100% {
+        transform: scale(1) translate(0, 0); /* بازگشت به حالت اولیه */
+    }
+}
+
 
 .container {
     text-align: center;
@@ -62,15 +177,7 @@ img {
     width: 50px; /* اندازه مناسب */
     height: 50px; /* اندازه مناسب */
 }
-body {
-    background-color: #ffffff !important; /* اجباری کردن پس‌زمینه سفید */
-    color: #000000; /* اطمینان از خوانایی متن با رنگ مشکی */
-    font-family: 'BTraffiBold_0', sans-serif;
-    overflow-x: hidden;
-    text-align: center;
-    max-width: 1000px;
-    margin: auto;
-}
+
 
 .container {
     position: relative;
@@ -128,7 +235,7 @@ body {
     font-family: "Shekasteh";
     margin: 0;
   }
-  
+/* داره درون */
   .names-container::before {
     content: "";
     position: absolute;
@@ -137,15 +244,15 @@ body {
     transform: translateX(-50%);
     width: 160px;
     height: 160px;
-    background: linear-gradient(145deg, #ffffff, #f0f0f0);
+    background: linear-gradient(145deg, #ffffff, #f9f8f8);
     border-radius: 50%;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1); */
     z-index: -1;
   }
   
   .initials {
     position: absolute;
-    top: -38px;
+    top: -50px;
     left: 50%;
     padding: 0 1rem;
     transform: translateX(-50%);
