--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 .swiper {
     width: 100%;
-    height: 100%;
+    height: 100vh !important;
   }
 
   .swiper-slide {
@@ -321,7 +321,7 @@ display: none !important;
 
 .invitation {
     font-family: 'Shabnam', sans-serif;
-    /* margin-top: -6rem */
+    margin-top: -6rem
 }
 
 /* تنظیمات برای تصویرهای پس‌زمینه */
@@ -594,7 +594,7 @@ img {
     }
 
     .date {
-        font-size: 1.4rem; /* سایز فونت تاریخ کمتر */
+        font-size: 1rem; /* سایز فونت تاریخ کمتر */
     }
 
     .event-time {
