--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     text-align: center;
     max-width: 1000px;
     position: relative;
-    height: 100%;
+    height: 100vh;
     -webkit-user-select: none; /* برای مرورگرهای WebKit مثل Chrome */
     -moz-user-select: none;    /* برای مرورگرهای Mozilla */
     -ms-user-select: none;     /* برای مرورگرهای قدیمی IE */
@@ -321,7 +321,7 @@ display: none !important;
 
 .invitation {
     font-family: 'Shabnam', sans-serif;
-    margin-top: -6rem
+    margin-top: -6rem !important;
 }
 
 /* تنظیمات برای تصویرهای پس‌زمینه */
@@ -594,7 +594,7 @@ img {
     }
 
     .date {
-        font-size: 1rem; /* سایز فونت تاریخ کمتر */
+        font-size: 0.9rem; /* سایز فونت تاریخ کمتر */
     }
 
     .event-time {
